some spacing issues

--- a/htmlcss/template.css
+++ b/htmlcss/template.css
@@ -4,7 +4,7 @@ body {
 
 header {
     display: grid;
-    grid-template-columns: 5fr 2fr 1fr 1fr;
+    grid-template-columns: 5fr 2.5fr .9fr 1fr;
     background: #ff5619;
     height: 75px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
